--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "name": "banking-app",
   "version": "1.0.0",
@@ -9,7 +9,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "express-openid-connect": "^2.2.1",
+    "handlebars": "^4.7.6",
     "nodemon": "^2.0.7",
     "sequelize": "^6.5.0",
     "sqlite3": "^5.0.1"
