--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "start": "nodemon server.js",
     "watch": "NODE_ENV=dev PORT=3000 nodemon server.js",
-    "test": "PORT=3001 "
+    "test": "PORT=3001 jest --watchAll",
+    "test:cypress": "PORT=3001 cypress open"
   },
   "engines": {
     "node": "14",
