--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "start": "nodemon server.js",
-    "watch": "NODE_ENV=dev PORT=3000 nodemon server.js",
+    "start": "node server.js",
+    "dev": "node server.js",
     "test": "PORT=3001 jest --watchAll",
     "test:cypress": "PORT=3001 cypress open"
   },
